# nlp-bible

./: README.md  pyproject.toml
authorship_attr/: cng_distance.py  distance.py  lab.ipynb  visualise.py
