[tool.poetry]
name = "nlp-bible"
version = "1"
description = "NLP employed in Bible studies"
authors = ["Wikcio1618"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
